--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
-# database configuration config
+# database config variables
+
+VUE_APP_APIKEY = 'AIzaSyDurL0wp080PWgbIZkaHSobCiIm_R95-Rk'
+VUE_APP_AUTHDOMAIN = 'shopish-5e282.firebaseapp.com'
+VUE_APP_DATABASEURL = 'https://shopish-5e282-default-rtdb.firebaseio.com'
+VUE_APP_PROJECTID ='shopish-5e282'
+VUE_APP_STORAGEBUCKET ='shopish-5e282.appspot.com'
+VUE_APP_MESSAGINGSENDERID = '304963509677'
+VUE_APP_APPID = '1:304963509677:web:164e08376e332b6ef19524'
+VUE_APP_MEASUREMENTID = 'G-3XKG15SWNS'
