--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "dependencies": {
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
@@ -24,6 +29,7 @@
     "@vue/cli-plugin-vuex": "^5.0.4",
     "@vue/cli-service": "^5.0.4",
     "babel-eslint": "^10.1.0",
+    "dotenv-webpack": "^7.1.0",
     "eslint": "^8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
