--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^9.6.10",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.7",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
