--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "firebase": "^9.6.10",
+    "sass-loader": "^13.0.2",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.7",
