--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "os": false
   },
   "dependencies": {
-    "autoprefixer": "10.4.5",
+    "autoprefixer": "^10.4.5",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "eslint-import-resolver-webpack": "^0.13.2",
     "firebase": "^9.6.10",
     "sass-loader": "^13.0.2",
     "vue": "^2.6.14",
